# Kimino

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/.github/: pull_request_template.md
docs/: astro.config.mjs
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: installation.mdx  introduction.md  tui.mdx
src/: main.py
src/Kimino/: main.py  style.tcss
src/Kimino/components/: BashFile_app.py  ascii_art.py  license_text.py
src/Kimino/pages/: About.py  about.tcss  full_license.py
src/components/: BashFile_app.py  TUI_app.py  Web_app.py
src/kimino/: main.py
src/kimino/components/: TUI_app.py  Web_app.py
src/kimino/pages/: About.py  about.tcss  full_license.py  license.tcss
src/styles/: style.tcss
